demo5/resources/style.css
* {
    padding: 0;
    margin: 0;
}

header {
    width: 1200px;
    margin: 0 auto;
    height: 94px;
    /* left: 0px; */
    top: 0px;

    background: #FFFFFF !important;
}

header .container-fluid {
    height: 94px;
    padding: 0 !important;
}

/* Logo */
.logo {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    gap: 10px;

}

.logo {
    height: 94px;
    padding: 0 !important;
    margin: 0 !important;
}

.navbar-brand {
    font-family: 'Rubik', sans-serif;
}


.brand-logo {
    width: 50px;
    height: 26px;
    margin-top: 33px;
    margin-bottom: 35px;


    background: #0094FF;
    border-radius: 6px 2px;
}

.brand-logo p {
    width: 36px;
    height: 18px;

    font-family: 'Rubik', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 15px;
    line-height: 18px;
    padding: 4px 7px;

    color: #fff;
}

.brand-logo-title p {
    width: 108px;
    height: 21px;

    font-family: 'Rubik', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    line-height: 21px;

    color: #3F4254;

}


.brand-logo-title p {
    font-weight: 300;
}

.brand-logo-title span {
    font-weight: 500;
}

.brand-logo-title {
    margin-top: 35px;
    margin-bottom: 38px;
}

/* Navbar Menu */
/* need check */
.navbar-menu {
    margin-left: 97px;
    margin-top: 28px;
    margin-bottom: 28px;

    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 15px;
    line-height: 22px;
}

.nav-link {
    padding: 0 !important;
    color: #3F4254 !important;
}

.nav-single-item {
    padding: 7px 0 8px 0;
    margin-right: 28px;
}

header nav {
    border-bottom: 1px solid #E4E6EF;
}

/*nav-link selected*/
#selected {
    width: 67px;
    height: 38px;
    background: #EFF2F5;
    /* opacity: 0.4; */
    border-radius: 6px;
    color: #0094FF !important;
    padding: 7px 14px 8px 15px;
}

/* user */
.user-login {
    width: 90px;
    height: 34px;
    display: flex;
    flex-direction: row;
    margin: 30px 0;
    align-items: center;
}


.user-title {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-size: 12px;
    line-height: 18px;
    text-align: -webkit-right;
}

.user-title .annouce {
    width: 30px;
    height: 18px;
    font-weight: 500;
    color: #A1A5B7;
}

.user-title .username {
    width: 48px;
    height: 18px;
    font-weight: 600;
    color: #000000;

}


.user-img {
    width: 32px;
    height: 32px;
    border-radius: 6px;
    margin-left: 10px;
}

.flex-row {
    display: flex;
    flex-direction: row;
}

/*Main content*/
/*Left col*/

section .container-fluid,
.row {
    width: 1500px;
    padding: 0;
}

.left-side-nav {
    width: 230px !important;
    border-right: 1px solid #EFF2F5;
    margin: 0px 39px 0px 160px !important;
    padding: 0 !important;
}

.side-nav-items {
    display: flex;
    justify-content: space-between;
    height: 39px;
    padding: 5px;
}

.side-nav-items.active {
    margin-bottom: 10px;
}

.sub-heading {
    padding: 0 10px;
}

.main-title .sub-heading {
    width: 100%;

    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 12px;

    letter-spacing: 0.03em;

    color: #A1A5B7;
}


.sub-content {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 14px;

    padding: 0 10px;
    color: #3F4254;

}


.sub-number {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 12px;
    padding: 0 10px;
    color: #A1A5B7;
}

.main-title {
    margin-top: 34px;
}

.main-title .more {
    margin-top: 18px;
}

/* selected topic */
.main-title .active {
    background: #F5F8FA;
    border-radius: 4px !important;
    border-left: 3px solid #0094FF;
    border-radius: 6px;
    ;
    padding: 10px 0;
}

/* Question - Middle */

.middle-side {
    padding: 0 !important;
    width: 581px !important;
    height: 1220px !important;
    margin-top: 42px !important;
    /*......*/
    margin-bottom: 36px;
    margin-right: 40px;
}


.question-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 580px;
    height: 38px;
}


.tag-header {
    display: flex;
    align-items: center;
}


.question-header h2 {
    margin: 0;
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 22px;
    line-height: 33px;
    letter-spacing: -0.01em;

    color: #181C32;

}

.question-header span {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    line-height: 24px;
    letter-spacing: -0.01em;

    color: #A1A5B7;

}

#my-btn {
    width: 126px;
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 14px;
    line-height: 20px;
    color: #FFFFFF;

}

.question-items {
    margin-top: 24px;
}

.question-items p {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 13px;
    line-height: 20px;
    letter-spacing: -0.01em;

    color: #3F4254;
    margin: 2px 0 0 0;
}

.question-items h3 {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 18px;
    line-height: 27px;
    letter-spacing: -0.01em;

    color: #181C32;
    margin: 0;
}

.question-footer {
    display: flex;
    justify-content: space-between;
    border-bottom: 1px dashed #E4E6EF;
    margin-top: 9px;
    padding-bottom: 28px;
}

.question-footer .user {
    display: flex;
}

.user {
    width: 123px;
    height: 36px;
}

.user .avt {
    width: 32px;
    height: 32px;
    border-radius: 6px;
    margin: 2px 0;
}

.user .user-content {
    margin-left: 7px;
}


.username,
.comment-time {
    margin-top: 0 !important;
}

.user-content .username {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 12px;
    line-height: 18px;
    letter-spacing: -0.02em;

    color: #181C32;

}

.user-content .comment-time {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 11px;
    line-height: 16px;
    letter-spacing: -0.02em;

    color: #A1A5B7;
    margin-top: 1px !important;

}

/* hashtag */

.question-footer .badge {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    gap: 10px;
    margin: 5px 0;
    padding: 0;
}

.badge .bg {
    max-width: 86px;
    height: 26px;

    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 11px;
    line-height: 16px;

    text-align: center;
    letter-spacing: 0.02em;

    color: #7E8299;
    padding: 5px 11px;
}


.badge .bg {
    background: #F3F6F9;
    border-radius: 4px;
}

.badge .bg-dash {
    border: 1px dashed #E4E6EF;
    border-radius: 4px;
    background: #fff;
}

/* pagination */
.pagination-bottom {
    width: 100%;
    margin-top: 30px;
    display: flex;
    justify-content: center;
    gap: 10px;
}

.pagination-bottom div {
    width: 31px;
    height: 31px;
    line-height: 31px;
    background: #F3F6F9;
    border-radius: 6px;
    color: #B5B5C3;
    text-align: center;
    text-decoration: none;
}

.pagination-bottom a {
    text-decoration: none;
    color: #B5B5C3;
}

.pagination-bottom span {
    color: #0094FF;
}

.right-side-nav {
    width: 300px !important;
    height: 822px;
    margin-top: 40px !important;
    padding: 0 !important;
}

/* search box */

.has-search .form-control {
    padding-left: 2.375rem;
}

.has-search .form-control-feedback {
    position: absolute;
    z-index: 2;
    display: block;
    width: 2.375rem;
    height: 2.375rem;
    line-height: 2.375rem;
    text-align: center;
    pointer-events: none;
    color: #aaa;
}


/* aside box */
.aside-heading {
    margin-top: 30px;

    box-sizing: border-box;

    width: 300px;

    background: #F5F8FA;
    border-radius: 9px;
}

.aside-heading h1 {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 16px;
    line-height: 18px;

    letter-spacing: -0.01em;

    color: #181C32;
    padding-top: 27px;
    margin-left: 29px;

}

.aside-content {
    margin-top: 22px;
    margin-left: 29px;
    display: flex;
}

.aside-content p {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 13px;
    line-height: 20px;
    letter-spacing: -0.01em;

    color: #3F4254;
    margin-left: 9.5px;
    /* margin-bottom: 19px; */
}

.content-img {
    width: 18px;
    height: 18px;
}

.last-child {
    margin-bottom: 35px !important;
}

/* effect */

.active p:hover {
    cursor: pointer;
    background: #F5F8FA;
    border-radius: 4px !important;
    border-radius: 6px;
    padding: 0 10px !important;
    color: #3F4254 !important;
}

.tab .sub-content:hover {
    cursor: pointer;
    background: #F5F8FA;
    border-radius: 4px !important;
    border-radius: 6px;
    padding: 10px 10px;
    color: #0094FF;
}

.side-nav-items:hover {
    cursor: pointer;
    background: #F5F8FA;
    border-radius: 4px !important;
    border-radius: 6px;
    padding: 10px 0;
}

.side-nav-items p:hover {
    color: #0094FF;
}

.nav-single-item a:hover {
    color: #0094FF !important;
}

.user-login:hover {
    cursor: pointer;
    /* padding: 10px;
    background: #F5F8FA; */
}

.form-group .form-control:focus {
    border-color: #3F4254;
    box-shadow: none;
}

.question-items h3:hover,
.aside-content p:hover {
    cursor: pointer;
    color: #009ef7;
}

.badge .bg-dash:hover {
    cursor: pointer;
    border-color: #009ef7;
    background: none;
}

.logo {
    cursor: pointer;
}

.bg:hover {
    cursor: pointer;
    background-color: #E4E6EF;
}

.pagination-bottom div:hover {
    color: #0094FF ;
    background-color: #EDF7FF;
}
/* responsive */

